--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/passport-google-oauth20": "^2.0.16"
   }
 }
